--- a/style.css
+++ b/style.css
@@ -9,3 +9,23 @@ body {
     padding: 0;
     margin: 0;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+.calculator {
+    /* border: 1px solid magenta; */
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    border-radius: 4px;
+    position: absolute;
+    background-color: rgba(255, 255, 255, .50);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
