--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
     padding: 0;
     margin: 0;
+    background: linear-gradient(to bottom, #00aaff, #ff7b00);
 }
 
 .container {
@@ -28,6 +29,54 @@ body {
     position: absolute;
     background-color: rgba(255, 255, 255, .50);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    border: 1px solid white;
+    background-color: rgba(255, 255, 255, .75);
+
+    font-size: .8rem;
+    font-weight: bold;
+    color: rgb(128, 128, 128);
+}
+
+.calculator-display {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 320px;
+    height: auto;
+    min-height: 120px;
+    padding: 10px;
+    border: 1px solid white;
+    background-color: rgba(0, 0, 0, .75);
+}
+
+.previous-display {
+    display: flex;
+    justify-content: end;
+    align-items: flex-start;
+    width: 100%;
+    height: 35%;
+    
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, .75);
+}
+
+.current-display {
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    width: 100%;
+    height: 60%;
+
+    font-size: 2.3rem;
+    color: white;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .calculator-keys {
