--- a/style.css
+++ b/style.css
@@ -86,3 +86,16 @@ body {
     grid-template-columns: repeat(4, 80px);
     grid-template-rows: repeat(5, 80px);
 }
+
+.calculator-keys > button {
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255, .75);
+    cursor: pointer;
+    
+    font-size: 1.5rem;
+}
+
+.calculator-keys > button:hover {
+    background-color: rgba(255, 255, 255, .90);
+}
