--- a/style.css
+++ b/style.css
@@ -121,3 +121,16 @@ body {
 .calculator-keys > .eval-operator:focus {
     background-color: rgb(0, 170, 255);
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 5%;
+    position: absolute;
+    bottom: 0;
+
+    font-size: .7rem;
+    color: rgba(255, 255, 255, 0.40);
+}
